--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "next": "^11.1.2",
     "nprogress": "^0.2.0",
